; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c___dvd_setgcmoffsetcb.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c___dvd_setgcmoffsetcb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__dvd_usrdata = common dso_local global i32* null, align 8
@__dvd_finaloffsetcb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @__dvd_setgcmoffsetcb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__dvd_setgcmoffsetcb(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp eq i32 %5, 16
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @__dvd_statetimeout()
  br label %26

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = icmp eq i32 %10, 1
  br i1 %11, label %12, label %24

12:                                               ; preds = %9
  %13 = load i32*, i32** @__dvd_usrdata, align 8
  %14 = bitcast i32* %13 to i64*
  store i64* %14, i64** %3, align 8
  store i32* null, i32** @__dvd_usrdata, align 8
  store i64 0, i64* %4, align 8
  %15 = load i64*, i64** %3, align 8
  %16 = icmp ne i64* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i64*, i64** %3, align 8
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %4, align 8
  br label %20

20:                                               ; preds = %17, %12
  %21 = load i64, i64* %4, align 8
  %22 = load i32, i32* @__dvd_finaloffsetcb, align 4
  %23 = call i32 @DVD_LowSetOffset(i64 %21, i32 %22)
  br label %26

24:                                               ; preds = %9
  %25 = call i32 (...) @__dvd_stategettingerror()
  br label %26

26:                                               ; preds = %24, %20, %7
  ret void
}

declare dso_local i32 @__dvd_statetimeout(...) #1

declare dso_local i32 @DVD_LowSetOffset(i64, i32) #1

declare dso_local i32 @__dvd_stategettingerror(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
